@@ -1,3 +1,8 @@
+2005-03-24 12:00  antirez
+
+	* ChangeLog, Makefile, TODO, jim-sdl.c: A simple SDL extension for
+	  Jim.
+
 2005-03-22 15:32  antirez
 
 	* ChangeLog, jim.c: Fix for short circuit in expr.
